# newsletter

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20230519163831_create_subscriptions_table.sql
scripts/: drop_db.sh  init_db.sh
src/: config.rs  helpers.rs  lib.rs  main.rs  server.rs
src/routes/: health_check.rs  mod.rs  sub.rs
tests/: conn_postgres.rs  health_check.rs  postgres.rs  sub.rs
