[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
config = "0.13"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]